# sentence_generator

./: main.py  pyproject.toml  test_main.py
