[tool.poetry]
name = "sentence-generator"
package-mode = false

[project]
name = "sentence-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.0.3,<10.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "stevedore (>=5.8.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
